# DEPRECATED_yandex_contest_invoker_flowctl_game

./: CMakeLists.txt  README.rst
include/yandex/contest/invoker/flowctl/game/: Broker.hpp  BrokerImpl.hpp  BrokerInterace.hpp  BrokerTextInterface.hpp  Configurator.hpp  Error.hpp  Killer.hpp  KillerImpl.hpp  KillerInterface.hpp  KillerSTDInterface.hpp  KillerStreamInterface.hpp  SharedTokenizer.hpp  Tokenizer.hpp
src/lib/: Broker.cpp  BrokerImpl.cpp  BrokerImplCommunicate.cpp  BrokerInterface.cpp  BrokerTextInterface.cpp  Configurator.cpp  Killer.cpp  KillerImpl.cpp  KillerInterface.cpp  KillerSTDInterface.cpp  KillerStreamInterface.cpp  SharedTokenizer.cpp  Tokenizer.cpp
src/tokenizers/: split.c  split_char.c
tests/: Game.cpp  SharedTokenizer.cpp
tests/resources/: echo_judge.py  echo_loop_judge.py  echo_loop_no_reply_judge.py  echo_loop_no_reply_solution.py  echo_loop_solution.py  echo_ok_judge.py  echo_solution.py  echo_terminate_judge.py  judge.py  killer_judge.py  sleep_rtl_judge.py  sleep_solution.py
